fixed centered margins on mobile

--- a/FCC/confidential-email/styles.css
+++ b/FCC/confidential-email/styles.css
@@ -6,7 +6,7 @@ body {
 
 #email {
     padding: 50px;
-    margin: 50px auto;
+    margin: 0 auto;
     width: 500px;
     height: auto;
     border: 2px solid black;
